// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getInitialState about 1`] = `
Object {
  "customLocation": Object {
    "description": Object {
      "entry": Object {
        "accession": null,
        "db": null,
        "detail": null,
        "integration": null,
        "isFilter": null,
        "memberDB": null,
        "memberDBAccession": null,
        "order": null,
      },
      "job": Object {
        "accession": null,
        "detail": null,
        "type": null,
      },
      "main": Object {
        "key": null,
        "numberOfFilters": 0,
      },
      "other": Array [
        "about",
      ],
      "protein": Object {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "proteome": Object {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "search": Object {
        "type": null,
        "value": null,
      },
      "set": Object {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "structure": Object {
        "accession": null,
        "chain": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "taxonomy": Object {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
    },
    "hash": "",
    "search": Object {},
  },
  "settings": undefined,
}
`;

exports[`getInitialState browse entries 1`] = `
Object {
  "customLocation": Object {
    "description": Object {
      "entry": Object {
        "accession": null,
        "db": null,
        "detail": null,
        "integration": null,
        "isFilter": null,
        "memberDB": null,
        "memberDBAccession": null,
        "order": null,
      },
      "job": Object {
        "accession": null,
        "detail": null,
        "type": null,
      },
      "main": Object {
        "key": "entry",
        "numberOfFilters": 0,
      },
      "other": Array [],
      "protein": Object {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "proteome": Object {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "search": Object {
        "type": null,
        "value": null,
      },
      "set": Object {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "structure": Object {
        "accession": null,
        "chain": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "taxonomy": Object {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
    },
    "hash": "",
    "search": Object {},
  },
  "settings": undefined,
}
`;

exports[`getInitialState browse proteins 1`] = `
Object {
  "customLocation": Object {
    "description": Object {
      "entry": Object {
        "accession": null,
        "db": null,
        "detail": null,
        "integration": null,
        "isFilter": null,
        "memberDB": null,
        "memberDBAccession": null,
        "order": null,
      },
      "job": Object {
        "accession": null,
        "detail": null,
        "type": null,
      },
      "main": Object {
        "key": "protein",
        "numberOfFilters": 0,
      },
      "other": Array [],
      "protein": Object {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "proteome": Object {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "search": Object {
        "type": null,
        "value": null,
      },
      "set": Object {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "structure": Object {
        "accession": null,
        "chain": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "taxonomy": Object {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
    },
    "hash": "",
    "search": Object {},
  },
  "settings": undefined,
}
`;

exports[`getInitialState home 1`] = `
Object {
  "customLocation": Object {
    "description": Object {
      "entry": Object {
        "accession": null,
        "db": null,
        "detail": null,
        "integration": null,
        "isFilter": null,
        "memberDB": null,
        "memberDBAccession": null,
        "order": null,
      },
      "job": Object {
        "accession": null,
        "detail": null,
        "type": null,
      },
      "main": Object {
        "key": null,
        "numberOfFilters": 0,
      },
      "other": Array [],
      "protein": Object {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "proteome": Object {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "search": Object {
        "type": null,
        "value": null,
      },
      "set": Object {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "structure": Object {
        "accession": null,
        "chain": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "taxonomy": Object {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
    },
    "hash": "",
    "search": Object {},
  },
  "settings": undefined,
}
`;

exports[`getInitialState summary entry 1`] = `
Object {
  "customLocation": Object {
    "description": Object {
      "entry": Object {
        "accession": "IPR000001",
        "db": "InterPro",
        "detail": null,
        "integration": null,
        "isFilter": null,
        "memberDB": null,
        "memberDBAccession": null,
        "order": null,
      },
      "job": Object {
        "accession": null,
        "detail": null,
        "type": null,
      },
      "main": Object {
        "key": "entry",
        "numberOfFilters": 0,
      },
      "other": Array [],
      "protein": Object {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "proteome": Object {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "search": Object {
        "type": null,
        "value": null,
      },
      "set": Object {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "structure": Object {
        "accession": null,
        "chain": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "taxonomy": Object {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
    },
    "hash": "",
    "search": Object {},
  },
  "settings": undefined,
}
`;

exports[`getInitialState summary protein 1`] = `
Object {
  "customLocation": Object {
    "description": Object {
      "entry": Object {
        "accession": null,
        "db": null,
        "detail": null,
        "integration": null,
        "isFilter": null,
        "memberDB": null,
        "memberDBAccession": null,
        "order": null,
      },
      "job": Object {
        "accession": null,
        "detail": null,
        "type": null,
      },
      "main": Object {
        "key": "protein",
        "numberOfFilters": 0,
      },
      "other": Array [],
      "protein": Object {
        "accession": "A0A023GPI8",
        "db": "reviewed",
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "proteome": Object {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "search": Object {
        "type": null,
        "value": null,
      },
      "set": Object {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "structure": Object {
        "accession": null,
        "chain": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "taxonomy": Object {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
    },
    "hash": "",
    "search": Object {},
  },
  "settings": undefined,
}
`;
